Resolved issue with home page links not opening up to a new window; menu icon reduced in size to prevent overlap.

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -7,7 +7,7 @@
   @include easeOut;
 
   .btn-hash {
-    width: 30px;
+    width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
     background: set-text-color($primary-color);
